# libmbtiles

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cmake/: EmbebedTemplate.cmake  EmbededTemplate.cmake
cmake/utils/: templates.in.h
includes/: mbtiles.h
src/cli/: main.cpp
src/lib/: decrease_zoom.cpp  mbtiles.cpp  mbtiles_creator.cpp  mbtiles_extractor.cpp  mbtiles_missing_report.cpp  mbtiles_viewer.cpp
src/libmbtiles/: __init__.py
src/sources/: convert_to_gray.cpp  mbtiles_delete_if_corrupt.cpp  tile_downloader.cpp
src/templates/: index.mustache.html  view.mustache.html
